--- a/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
@@ -101,6 +101,15 @@ spec:
               value: {{ .Values.collab.groupPersistenceInterval }}
             - name: APPFLOWY_COLLAB_GROUP_GRACE_PERIOD_SECS
               value: {{ .Values.collab.groupGracePeriodSecs }}
+            - name: APPFLOWY_INDEXER_ENABLED
+              value: {{ if .Values.global.ai.enabled }}{{ .Values.indexer.enabled | quote }}{{ else }}false{{ end }}
+            {{- if .Values.global.ai.enabled }}
+            - name: APPFLOWY_AI_OPENAI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.global.secret.name }}
+                  key: {{ .Values.global.secret.ai.openAI.apiKey }}
+            {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
