--- a/charts/appflowy/charts/appflowy-worker/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-worker/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
             - name: APPFLOWY_WORKER_IMPORT_TICK_INTERVAL
               value: {{ .Values.importTickInterval | quote}}
             - name: APPFLOWY_S3_USE_MINIO
-              value: {{ .Values.global.s3.useMinio | quote }} 
+              value: {{ .Values.global.s3.useMinio | quote }}
             - name: APPFLOWY_S3_MINIO_URL
               value: {{ .Values.global.s3.minioUrl }}
             - name: APPFLOWY_S3_ACCESS_KEY
@@ -67,6 +67,15 @@ spec:
                 secretKeyRef:
                   name: {{ .Values.global.secret.name }}
                   key: {{ .Values.global.secret.smtp.password.key }}
+            - name: APPFLOWY_INDEXER_ENABLED
+              value: {{ if .Values.global.ai.enabled }}{{ .Values.indexer.enabled | quote }}{{ else }}false{{ end }}
+            {{- if .Values.global.ai.enabled }}
+            - name: APPFLOWY_AI_OPENAI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.global.secret.name }}
+                  key: {{ .Values.global.secret.ai.openAI.apiKey }}
+            {{- end }}
 
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
