--- a/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
@@ -96,11 +96,11 @@ spec:
             - name: APPFLOWY_ACCESS_CONTROL
               value: {{ .Values.accessControl.enabled | quote }}
             - name: APPFLOWY_COLLABORATE_REMOVE_BATCH_SIZE
-              value: {{ .Values.collab.removeBatchSize }}
+              value: {{ .Values.collab.removeBatchSize | quote }}
             - name: APPFLOWY_COLLAB_GROUP_PERSISTENCE_INTERVAL
-              value: {{ .Values.collab.groupPersistenceInterval }}
+              value: {{ .Values.collab.groupPersistenceInterval | quote }}
             - name: APPFLOWY_COLLAB_GROUP_GRACE_PERIOD_SECS
-              value: {{ .Values.collab.groupGracePeriodSecs }}
+              value: {{ .Values.collab.groupGracePeriodSecs | quote }}
             - name: APPFLOWY_INDEXER_ENABLED
               value: {{ if .Values.global.ai.enabled }}{{ .Values.indexer.enabled | quote }}{{ else }}false{{ end }}
             {{- if .Values.global.ai.enabled }}
