fix: incorrect open ai secret key

--- a/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
@@ -108,7 +108,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ .Values.global.secret.name }}
-                  key: {{ .Values.global.secret.ai.openAI.apiKey }}
+                  key: {{ .Values.global.secret.ai.openAIAPIKey.key }}
             {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
