--- a/charts/appflowy/charts/appflowy-admin/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-admin/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - name: ADMIN_FRONTEND_GOTRUE_URL
               value: {{ .Values.gotrue.baseUrl }}
             - name: ADMIN_FRONTEND_REDIS_URL
-              value: {{ .Values.redis.uri }}
+              value: {{ .Values.global.redis.uri }}
             - name: ADMIN_FRONTEND_APPFLOWY_CLOUD_URL
               value: {{ .Values.appflowyCloud.baseUrl }}
           resources:
