fix: incorrect host variable  for ingress route

--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: {{ .Values.global.ingress.nginx.className }}
   rules:
-    - host: {{ .Values.global.external_host }}
+    - host: {{ .Values.global.externalHost }}
       http:
         paths:
           - path: /api
