--- a/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
+++ b/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: {{ .Values.global.ingress.nginx.className }}
   rules:
-    - host: {{ .Values.global.external_host }}
+    - host: {{ .Values.global.externalHost }}
       http:
         paths:
           - path: /gotrue(/|$)(.*)
