--- a/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
@@ -55,7 +55,7 @@ spec:
             - name: APPFLOWY_GOTRUE_BASE_URL
               value: {{ .Values.gotrue.baseUrl }}
             - name: APPFLOWY_GOTRUE_ADMIN_EMAIL
-              value: {{ .Values.gotrue.adminEmail }}
+              value: {{ .Values.global.gotrue.adminEmail }}
             - name: APPFLOWY_GOTRUE_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
