--- a/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
@@ -104,7 +104,7 @@ spec:
             - name: APPFLOWY_COLLAB_GROUP_GRACE_PERIOD_SECS
               value: {{ .Values.collab.groupGracePeriodSecs | quote }}
             - name: APPFLOWY_INDEXER_ENABLED
-              value: {{ if .Values.global.ai.enabled }}{{ .Values.indexer.enabled | quote }}{{ else }}false{{ end }}
+              value: {{ if .Values.global.ai.enabled }}{{ .Values.indexer.enabled | quote }}{{ else }}"false"{{ end }}
             {{- if .Values.global.ai.enabled }}
             - name: APPFLOWY_AI_OPENAI_API_KEY
               valueFrom:
