--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
@@ -4,10 +4,12 @@ kind: Ingress
 metadata:
   name: {{ include "appflowy-cloud.fullname" . }}-api
   annotations:
+    {{- if .Values.global.appflowyWeb.enabled }}
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: {{ .Values.global.ingress.cors.allowOrigin | quote }}
+    nginx.ingress.kubernetes.io/cors-allow-origin: {{ .Values.global.appflowyWeb.url | quote }}
     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization, Accept, Client-Version"
-    nginx.ingress.kubernetes.io/cors-max-age: {{ .Values.global.ingress.cors.maxAge | quote }}
+    nginx.ingress.kubernetes.io/cors-max-age: {{ .Values.global.appflowyWeb.corsMaxAge | quote }}
+    {{- end }}
 spec:
   ingressClassName: {{ .Values.global.ingress.nginx.className }}
   rules:
