--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/traefik/ingressroute.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/traefik/ingressroute.yaml
@@ -12,6 +12,10 @@ spec:
       services:
         - name: {{ include "appflowy-cloud.fullname" . }}
           port: {{ .Values.service.port }}
+      {{- if .Values.global.appflowyWeb.enabled }}
+      middlewares:
+        - name: {{ include "appflowy-cloud.fullname" . }}-cors
+      {{- end }}
     - match: Host(`{{ .Values.global.externalHost }}`) && PathPrefix(`/ws`)
       kind: Rule
       services:
