--- a/charts/appflowy/charts/appflowy-gotrue/templates/ingress/traefik/stripprefixmiddleware.yaml
+++ b/charts/appflowy/charts/appflowy-gotrue/templates/ingress/traefik/stripprefixmiddleware.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: {{ include "appflowy-gotrue.strip-prefix-middleware.fullname" . }}
+  name: {{ include "appflowy-gotrue.fullname" . }}-stripprefix
 spec:
   stripPrefix:
     prefixes:
