--- a/charts/appflowy/values.yaml
+++ b/charts/appflowy/values.yaml
@@ -21,11 +21,6 @@ global:
     websocket:
       # -- Define timeout for websocket connection. Currently only used for the Nginx ingress.
       timeout: 86400
-    cors:
-      # -- Configure the domains which are allowed to access the API server eg. domain for AppFlowy Web
-      allowOrigins: "*"
-      # -- CORS max age
-      maxAge: "3600"
   gotrue:
     # -- Gotrue admin user to be created when Gotrue is deployed for the first time
     adminEmail: "admin@example.com"
@@ -71,6 +66,13 @@ global:
     # -- Enable AI related functionalities. Require OpenAI API key to be set under secret.
     # -- As of now, this chart does not include AppFlowy AI service, so enabling AI is only needed to enable embedding-based search..
     enabled: false
+  appflowyWeb:
+    # -- Enable this if AppFlowy Web has been installed
+    enabled: false
+    # -- The URL of the AppFlowy Web. This must be accessible from the user's browser
+    url: "http://localhost:3000"
+    # -- CORS max age
+    corsMaxAge: 3600
   secret:
     # -- Name of the secret which stores all the sensitive information required for AppFlowy
     name: appflowy
