--- a/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
@@ -105,6 +105,10 @@ spec:
               value: {{ .Values.collab.groupGracePeriodSecs | quote }}
             - name: APPFLOWY_INDEXER_ENABLED
               value: {{ if .Values.global.ai.enabled }}{{ .Values.indexer.enabled | quote }}{{ else }}"false"{{ end }}
+            {{- if .Values.global.appflowyWeb.enabled }}
+            - name: APPFLOWY_WEB_URL
+              value: {{ .Values.global.appflowyWeb.url }}
+            {{- end }}
             {{- if .Values.global.ai.enabled }}
             - name: APPFLOWY_AI_OPENAI_API_KEY
               valueFrom:
