--- a/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/deployment.yaml
@@ -53,7 +53,7 @@ spec:
                   name: {{ .Values.global.secret.name }}
                   key: {{ .Values.global.secret.jwt.secret.key }}
             - name: APPFLOWY_GOTRUE_BASE_URL
-              value: {{ .Values.gotrue.baseUrl }}
+              value: {{ .Values.global.gotrue.baseUrl }}
             - name: APPFLOWY_GOTRUE_ADMIN_EMAIL
               value: {{ .Values.global.gotrue.adminEmail }}
             - name: APPFLOWY_GOTRUE_ADMIN_PASSWORD
@@ -105,10 +105,8 @@ spec:
               value: {{ .Values.collab.groupGracePeriodSecs | quote }}
             - name: APPFLOWY_INDEXER_ENABLED
               value: {{ if .Values.global.ai.enabled }}{{ .Values.indexer.enabled | quote }}{{ else }}"false"{{ end }}
-            {{- if .Values.global.appflowyWeb.enabled }}
             - name: APPFLOWY_WEB_URL
-              value: {{ .Values.global.appflowyWeb.url }}
-            {{- end }}
+              value: {{ printf "%s://%s:%d" .Values.global.scheme .Values.global.externalHost (.Values.global.externalPort | int) }}
             {{- if .Values.global.ai.enabled }}
             - name: AI_OPENAI_API_KEY
               valueFrom:
