feat: add support for extra ingress annotations

--- a/charts/appflowy/charts/appflowy-admin/values.yaml
+++ b/charts/appflowy/charts/appflowy-admin/values.yaml
@@ -58,6 +58,11 @@ volumeMounts: []
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
+ingress:
+  nginx:
+    # Extra annotations for the Nginx Ingress
+    extraAnnotions: {}
+
 nodeSelector: {}
 
 tolerations: []
