--- a/charts/appflowy/charts/appflowy-admin/templates/ingress/nginx/ingress.yaml
+++ b/charts/appflowy/charts/appflowy-admin/templates/ingress/nginx/ingress.yaml
@@ -3,6 +3,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "appflowy-admin.fullname" . }}
+  {{- with .Values.ingress.nginx.extraAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   ingressClassName: {{ .Values.global.ingress.nginx.className }}
   rules:
