--- a/charts/appflowy/charts/appflowy-gotrue/values.yaml
+++ b/charts/appflowy/charts/appflowy-gotrue/values.yaml
@@ -67,6 +67,11 @@ volumeMounts: []
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
+ingress:
+  nginx:
+    # Extra annotations for the Nginx Ingress
+    extraAnnotions: {}
+
 nodeSelector: {}
 
 tolerations: []
