--- a/charts/appflowy/values.yaml
+++ b/charts/appflowy/values.yaml
@@ -11,6 +11,8 @@ global:
       enabled: true
       # -- The class name of the NGINX Ingress Controller ingress
       className: nginx
+      # -- Nginx TLS secret name
+      tlsSecretName: ""
     traefik:
       # -- Enable to create IngressRoute for Traefik Ingress Controller
       enabled: false
