--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/api.yaml
@@ -21,6 +21,9 @@ spec:
                 port:
                   number: {{ .Values.service.port }}
 {{- end }}
+  {{- if .Values.global.ingress.nginx.tls }}
   tls:
-    - hosts: {{ .Values.global.externalHost }}
-      secretName: {{ .Values.global.ingress.nginx.tlsSecretName }}
+    - hosts:
+        - {{ .Values.global.externalHost }}
+      secretName: {{ .Values.global.ingress.nginx.tls.secretName }}
+  {{-end }}
