--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/ws.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/ws.yaml
@@ -22,3 +22,9 @@ spec:
                 port:
                   number: {{ .Values.service.port }}
 {{- end }}
+  {{- if .Values.global.ingress.nginx.tls }}
+  tls:
+    - hosts:
+        - {{ .Values.global.externalHost }}
+      secretName: {{ .Values.global.ingress.nginx.tls.secretName }}
+  {{-end }}
