--- a/charts/appflowy/charts/appflowy-web/templates/ingress/nginx/ingress.yaml
+++ b/charts/appflowy/charts/appflowy-web/templates/ingress/nginx/ingress.yaml
@@ -21,3 +21,10 @@ spec:
                 port:
                   number: {{ .Values.service.port }}
 {{- end }}
+  {{- if .Values.global.ingress.nginx.tls }}
+  tls:
+    - hosts:
+        - {{ .Values.global.externalHost }}
+      secretName: {{ .Values.global.ingress.nginx.tls.secretName }}
+  {{-end }}
+
