--- a/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
+++ b/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
@@ -21,4 +21,10 @@ spec:
                 name: {{ include "appflowy-gotrue.fullname" . }}
                 port:
                   number: {{ .Values.service.port }}
+  {{- if .Values.global.ingress.nginx.tls.enabled }}
+  tls:
+    - hosts:
+        - {{ .Values.global.externalHost }}
+      secretName: {{ .Values.global.ingress.nginx.tls.secretName }}
+  {{- end }}
 {{- end }}
