feat: add support for Appflowy AI

--- a/charts/appflowy/Chart.yaml
+++ b/charts/appflowy/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: appflowy
 description: AppFlowy Cloud Helm Chart
 type: application
-version: 0.1.22
+version: 0.1.23
 dependencies:
   - name: redis
     condition: redis.enabled
@@ -30,4 +30,7 @@ dependencies:
     version: 0.1.0
   - name: appflowy-web
     condition: appflowy-web.enabled
+    version: 0.1.0
+  - name: appflowy-ai
+    condition: global.ai.enabled
     version: 0.1.0
