--- a/charts/appflowy/templates/secret.yaml
+++ b/charts/appflowy/templates/secret.yaml
@@ -21,4 +21,7 @@ data:
   {{ .Values.global.secret.postgres.gotrue.databaseUrl.key }}: {{ include "appflowy.gotrueDatabase.url" . | b64enc }}
   {{ .Values.global.secret.gotrue.adminPassword.key }}: {{ .Values.global.secret.gotrue.adminPassword.value | b64enc }}
   {{ .Values.global.secret.postgres.ai.databaseUrl.key }}: {{ include "appflowy.aiDatabase.url" . | b64enc }}
+  {{- if .Values.global.ai.enabled }}
+  {{ .Values.global.secret.ai.openAIAPIKey.key }}: {{ .Values.global.secret.ai.openAIAPIKey.value | b64enc }}
+  {{- end }}
 {{- end }}
