--- a/charts/appflowy/values.yaml
+++ b/charts/appflowy/values.yaml
@@ -16,6 +16,8 @@ global:
         enabled: false
         # -- Nginx TLS secret name if using https
         secretName: ""
+      # -- Nginx extra annotations
+      extraAnnotations: {}
     traefik:
       # -- Enable to create IngressRoute for Traefik Ingress Controller
       enabled: false
