--- a/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/ws.yaml
+++ b/charts/appflowy/charts/appflowy-cloud/templates/ingress/nginx/ws.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "appflowy-cloud.fullname" . }}-ws
   annotations:
     nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.global.ingress.websocket.timeout | quote }}
-  {{- with .Values.ingress.nginx.extraAnnotations }}
+  {{- with .Values.global.ingress.nginx.extraAnnotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
