--- a/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
+++ b/charts/appflowy/charts/appflowy-gotrue/templates/ingress/nginx/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "appflowy-gotrue.fullname" . }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-  {{- with .Values.ingress.nginx.extraAnnotations }}
+  {{- with .Values.global.ingress.nginx.extraAnnotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
