--- a/charts/appflowy/templates/secret.yaml
+++ b/charts/appflowy/templates/secret.yaml
@@ -14,12 +14,13 @@ data:
   {{ .Values.global.secret.oauth.discordClientSecret.key }}: {{ .Values.global.secret.oauth.discordClientSecret.value | b64enc }}
   {{ .Values.global.secret.oauth.githubClientSecret.key }}: {{ .Values.global.secret.oauth.githubClientSecret.value | b64enc }}
   {{ .Values.global.secret.oauth.appleClientSecret.key }}: {{ .Values.global.secret.oauth.appleClientSecret.value | b64enc }}
+  {{ .Values.global.secret.oauth.samlPrivateKey.key }}: {{ .Values.global.secret.oauth.samlPrivateKey.value | b64enc }}
   {{ .Values.global.secret.postgres.adminPassword.key }}: {{ .Values.global.secret.postgres.adminPassword.value | b64enc }}
   {{ .Values.global.secret.postgres.gotrue.postgresPassword.key }}: {{ .Values.global.secret.postgres.gotrue.postgresPassword.value | b64enc }}
   {{ .Values.global.secret.postgres.appflowy.postgresPassword.key }}: {{ .Values.global.secret.postgres.appflowy.postgresPassword.value | b64enc }}
   {{ .Values.global.secret.postgres.appflowy.databaseUrl.key }}: {{ include "appflowy.appflowyDatabase.url" . | b64enc }}
   {{ .Values.global.secret.postgres.gotrue.databaseUrl.key }}: {{ include "appflowy.gotrueDatabase.url" . | b64enc }}
-  {{ .Values.global.secret.gotrue.adminPassword.key }}: {{ .Values.global.secret.gotrue.adminPassword.value | b64enc }}  
+  {{ .Values.global.secret.gotrue.adminPassword.key }}: {{ .Values.global.secret.gotrue.adminPassword.value | b64enc }}
   {{- if .Values.global.ai.enabled }}
   {{ .Values.global.secret.postgres.ai.databaseUrl.key }}: {{ include "appflowy.aiDatabase.url" . | b64enc }}
   {{ .Values.global.secret.ai.openAIAPIKey.key }}: {{ .Values.global.secret.ai.openAIAPIKey.value | b64enc }}
