feat: support extra middlewares, remove ingress for AI service

--- a/charts/appflowy/charts/appflowy-admin/templates/ingress/traefik/ingressroute.yaml
+++ b/charts/appflowy/charts/appflowy-admin/templates/ingress/traefik/ingressroute.yaml
@@ -12,6 +12,10 @@ spec:
       services:
         - name: {{ include "appflowy-admin.fullname" . }}
           port: {{ .Values.service.port }}
+      {{- with .Values.global.ingress.traefik.extraMiddlewares }}
+      middlewares:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
   {{- with .Values.global.ingress.traefik.tlsSecretName }}
   tls:
     secretName: {{ . }}
