chore: update min app version to 0.9.49, deprecate setup job

--- a/charts/appflowy/templates/secret.yaml
+++ b/charts/appflowy/templates/secret.yaml
@@ -15,7 +15,9 @@ data:
   {{ .Values.global.secret.oauth.githubClientSecret.key }}: {{ .Values.global.secret.oauth.githubClientSecret.value | b64enc }}
   {{ .Values.global.secret.oauth.appleClientSecret.key }}: {{ .Values.global.secret.oauth.appleClientSecret.value | b64enc }}
   {{ .Values.global.secret.oauth.samlPrivateKey.key }}: {{ .Values.global.secret.oauth.samlPrivateKey.value | b64enc }}
+  {{- if .Values.postgresql.enabled }}
   {{ .Values.global.secret.postgres.adminPassword.key }}: {{ .Values.global.secret.postgres.adminPassword.value | b64enc }}
+  {{- end }}
   {{ .Values.global.secret.postgres.gotrue.postgresPassword.key }}: {{ .Values.global.secret.postgres.gotrue.postgresPassword.value | b64enc }}
   {{ .Values.global.secret.postgres.appflowy.postgresPassword.key }}: {{ .Values.global.secret.postgres.appflowy.postgresPassword.value | b64enc }}
   {{ .Values.global.secret.postgres.appflowy.databaseUrl.key }}: {{ include "appflowy.appflowyDatabase.url" . | b64enc }}
