fix: revert removal of migration job so that pgvector can be initialized by non super user

--- a/charts/appflowy/values.yaml
+++ b/charts/appflowy/values.yaml
@@ -258,3 +258,13 @@ minio:
     requests:
       cpu: 10m
       memory: 256Mi
+
+setupJob:
+  # -- Required for enabling pgvector for database. This is optional if the postgres user for appflowy is already a superadmin, or the extension is already enabled.
+  enabled: true
+  postgresConnectTimeout: 60
+  backoffLimit: 5
+  resources: {}
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
