--- a/charts/appflowy/charts/appflowy-worker/templates/deployment.yaml
+++ b/charts/appflowy/charts/appflowy-worker/templates/deployment.yaml
@@ -61,7 +61,7 @@ spec:
             - name: APPFLOWY_MAILER_SMTP_PORT
               value: {{ .Values.global.smtp.port | quote}}
             - name: APPFLOWY_MAILER_SMTP_USERNAME
-              value: {{ .Values.global.smtp.username }}
+              value: {{ .Values.global.smtp.user }}
             - name: APPFLOWY_MAILER_SMTP_PASSWORD
               valueFrom:
                 secretKeyRef:
